# chimera-runtime

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  generate_demo_data.py  medium-article-annex-iv.md  medium-article.md  project_plan.md  pyproject.toml
.chimera/: config.yaml
.github/workflows/: deploy.yml
audit_logs/: dec_01082383d7f94119bda2.json  dec_0c54ff09de4d4dc8b56a.json  dec_0f305c66b6c94f548b37.json  dec_17a533a0366b4ffba1c0.json  dec_1ae2feeeb012413ea1bb.json  dec_1c2c83dbaf05429cab95.json  dec_253bec396fa1403ca9b6.json  dec_259bb907c4214e8fa608.json  dec_2f398ecbbe214d2a948e.json  dec_3d177aceed394ee5bc34.json  dec_3ec8bb443e69471f8150.json  dec_4e883c4c246544bda1f6.json  dec_54bca9db05e0474290cb.json  dec_57fa1911ff95484b8de6.json  dec_696a0c2f344c4d4cb97a.json  dec_6f449f23578741898706.json  dec_720742ae19ec4ae9b316.json  dec_7b73de9418c5423794ef.json  dec_7d8766c7f48540bb98d2.json  dec_8237c40c674543c08321.json  dec_8389924ae9ed473bac66.json  dec_95abb0ca56ea4f7cb365.json  dec_bffe1c8a7ba143959ca6.json  dec_cbec4c806f7a4905ba45.json  dec_e3a36b4837d940d08d88.json  dec_e5fd7678062747f3a072.json  dec_efbfdf820d47412396cf.json  dec_f61383c947b5459eb214.json
chimera_compliance/: __init__.py  agent.py  config.py  models.py  oversight.py  policy.py  rules.py
chimera_compliance/audit/: __init__.py  html_report.py  query.py  recorder.py  storage.py
chimera_compliance/cli/: __init__.py  cmd_audit.py  cmd_docs.py  cmd_explain.py  cmd_init.py  cmd_license.py  cmd_policy.py  cmd_run.py  cmd_stop.py  cmd_test.py  cmd_verify.py  display.py  main.py
chimera_compliance/docs/: __init__.py  generator.py
chimera_compliance/docs/templates/: annex_iv.md
chimera_compliance/integrations/: __init__.py  autogen.py  base.py  crewai.py  langchain.py  langgraph.py  llamaindex.py
chimera_compliance/licensing/: __init__.py  license.py
chimera_compliance/llm/: __init__.py  anthropic_provider.py  base.py  google_provider.py  ollama_provider.py  openai_provider.py
chimera_runtime/: __init__.py  agent.py  config.py  models.py  oversight.py  policy.py  rules.py
chimera_runtime/audit/: __init__.py  html_report.py  query.py  recorder.py  storage.py  uploader.py
chimera_runtime/cli/: __init__.py  cmd_audit.py  cmd_docs.py  cmd_explain.py  cmd_init.py  cmd_license.py  cmd_policy.py  cmd_run.py  cmd_stop.py  cmd_test.py  cmd_verify.py  display.py  main.py
chimera_runtime/docs/: __init__.py  generator.py
chimera_runtime/integrations/: __init__.py  autogen.py  base.py  crewai.py  langchain.py  langgraph.py  llamaindex.py
chimera_runtime/licensing/: __init__.py  keys.py  license.py
chimera_runtime/llm/: __init__.py  anthropic_provider.py  base.py  google_provider.py  ollama_provider.py  openai_provider.py
dashboard/: Dockerfile.backend  docker-compose.aws.yml  docker-compose.prod.yml  docker-compose.yml
dashboard/backend/: __init__.py  config.py  main.py  requirements.txt
dashboard/backend/middleware/: auth.py
dashboard/backend/models/: __init__.py  api_key.py  user.py  wallet.py
dashboard/backend/routers/: agents.py  analytics.py  audit.py  auth.py  compliance.py  demo.py  docs.py  ingest.py  leads.py  license.py  policies.py  settings.py  wallet.py
dashboard/backend/services/: analytics_service.py  audit_service.py  auth_service.py  docs_service.py  license_service.py  policy_service.py  storage_service.py
dashboard/frontend/: Dockerfile  package-lock.json  package.json
dashboard/frontend/policies/: starter.yaml
dashboard/frontend/src/app/: globals.css  layout.tsx  page.tsx
dashboard/frontend/src/app/(dashboard)/: layout.tsx
dashboard/frontend/src/app/(dashboard)/analytics/: page.tsx
dashboard/frontend/src/app/(dashboard)/connect/: page.tsx
dashboard/frontend/src/app/(dashboard)/dashboard/: page.tsx
dashboard/frontend/src/app/(dashboard)/decisions/: page.tsx
dashboard/frontend/src/app/(dashboard)/decisions/[id]/: page.tsx
dashboard/frontend/src/app/(dashboard)/leads/: page.tsx
dashboard/frontend/src/app/(dashboard)/learn-csl/: page.tsx
dashboard/frontend/src/app/(dashboard)/policies/: page.tsx
dashboard/frontend/src/app/(dashboard)/settings/: page.tsx
dashboard/frontend/src/app/contact/: page.tsx
dashboard/frontend/src/app/demo/: page.tsx
dashboard/frontend/src/app/docs/: layout.tsx  page.tsx
dashboard/frontend/src/app/docs/[slug]/: page.tsx
dashboard/frontend/src/app/investors/: page.tsx
dashboard/frontend/src/app/login/: page.tsx
dashboard/frontend/src/app/register/: page.tsx
dashboard/frontend/src/components/: pro-gate.tsx
dashboard/frontend/src/components/dashboard/: ComplianceStatus.tsx  RecentDecisions.tsx  StatsCards.tsx  ViolationsChart.tsx
dashboard/frontend/src/components/layout/: AuthNav.tsx  PublicNav.tsx  Sidebar.tsx
dashboard/frontend/src/components/policies/: PolicyMarketplace.tsx
dashboard/frontend/src/lib/: analytics.ts  api.ts  auth.tsx  types.ts
docs/: annex_iv_technical_documentation.md  api-reference.md  architecture.md  cli-reference.md  eu-ai-act.md  index.md  integrations.md  policy-guide.md  quickstart.md
infrastructure/: Caddyfile  setup.sh
policies/: governance.csl  governance.yaml  paymentguard.csl  quickstart.csl
tests/: test_agent.py  test_audit.py  test_cli.py  test_config.py  test_docs_generator.py  test_integration.py  test_integrations.py  test_llm_providers.py  test_models.py  test_policy.py  test_rules.py  test_scenario_acmepay.py
